<resources>
    <string name="app_name">Производственная гимнастика!</string>
    <string name="start">Начать</string>
    <string name="add">Добавить</string>
    <string name="progress">Прогресс</string>
    <string name="list">Все занятия</string>
    <string name="cont">Дальше</string>
    <string name="addTr">Название тренировки</string>
    <string name="conTr"> Cоздать тренировку</string>
    <string name="nameEx"> Название упражнения</string>
    <string name="desEx"> Описание упражнения</string>
    <string name="scEx">  Количество повторений</string>
    <string name="conEx"> Сохранить упражнение</string>
    <string name="end"> Закончить создание</string>
    <string name="time"> Введите время для уведомления</string>
    <string name="vkl"> Включение</string>
    <string name="yes"> Вкл</string>
    <string name="no"> Выкл</string>
</resources>
